mysql-8.4/0.0.3/list.mdx
---
title: Available Extensions
description: VillageSQL extensions you can use
---

## Built-in Extensions

<Warning>
  When building from source, only `vsql_complex` and `vsql_simple` are included. Other extensions are maintained in separate repositories (linked below).
</Warning>

### vsql_complex

**Status:** Built-in with VillageSQL
**Repository:** [villagesql-server/villagesql/examples/vsql-complex](https://github.com/villagesql/villagesql-server/tree/main/villagesql/examples/vsql-complex)

Complex number data type with full arithmetic support for electrical engineering, signal processing, and scientific computing.

**Features:**
- `COMPLEX` column type for storing complex numbers (a + bi)
- String literal format: `'(real,imaginary)'` (e.g., `'(3.0,4.0)'`)
- Arithmetic: add, subtract, multiply, divide
- Utilities: `complex_real()`, `complex_imag()`, `complex_abs()`, `complex_conjugate()`
- Binary storage: 16 bytes (2 doubles)

**Installation:**
```sql
INSTALL EXTENSION vsql_complex;
```

**Example Usage:**
```sql
CREATE TABLE signals (
    id INT PRIMARY KEY,
    impedance COMPLEX,
    frequency_response COMPLEX
);

INSERT INTO signals VALUES
    (1, '(50.0,0.0)', '(0.95,0.31)');

SELECT
    complex_abs(impedance) as magnitude,
    complex_add(impedance, frequency_response) as total
FROM signals;
```

**Learn More:** [vsql_complex Deep Dive](/mysql-8.4/0.0.3/examples)

---

## External Extensions

The following extensions are maintained in separate repositories and must be built and installed separately. Each extension provides its own installation instructions and documentation.

<CardGroup cols={2}>
  <Card
    title="vsql_uuid"
    icon="fingerprint"
    href="https://github.com/villagesql/vsql-uuid"
  >
    **UUID data type and functions**

    Generate and work with UUIDs natively in SQL. Supports v1, v3, v4, v5, v6, and v7 with a native 16-byte UUID type, timestamp extraction, and comparison.
  </Card>

  <Card
    title="vsql_crypto"
    icon="lock"
    href="https://github.com/villagesql/vsql-crypto"
  >
    **Cryptographic functions**

    Hashing (MD5, SHA-1, SHA-256, SHA-512, and more), HMAC, AES encryption, password hashing, and secure random data generation using OpenSSL.
  </Card>

  <Card
    title="vsql_network_address"
    icon="network-wired"
    href="https://github.com/villagesql/vsql-network-address"
  >
    **Network address types**

    IPv4, IPv6, and MAC address data types with validation, comparison, and network operations.
  </Card>

  <Card
    title="vsql_ai"
    icon="brain"
    href="https://github.com/villagesql/vsql-ai"
  >
    **AI-powered SQL functions**

    AI prompting and embedding functions for SQL queries. Supports Anthropic Claude, Google Gemini, OpenAI, and local Ollama.
  </Card>

  <Card
    title="vsql_http"
    icon="globe"
    href="https://github.com/villagesql/vsql-http"
  >
    **HTTP client functions**

    Make HTTP requests from SQL queries. GET, POST, PUT, DELETE, PATCH with JSON responses, plus URL encoding and decoding.
  </Card>
</CardGroup>

---

## Installing Built-in Extensions

Built-in extensions are ready to install:

```sql
INSTALL EXTENSION extension_name;
```

**For source builds:** Only `vsql_complex` and `vsql_simple` are included by default. To use external extensions, build them from their GitHub repositories (links above) and copy the `.veb` files to your VEF directory (see [Installing External Extensions](/mysql-8.4/0.0.3/install#installing-external-extensions)).

See [Installing Extensions](/mysql-8.4/0.0.3/install) for detailed instructions.

---

## Creating Your Own Extension

Build custom extensions using the VillageSQL extension template:

<Card
  title="vsql_extension_template"
  icon="code"
  href="https://github.com/villagesql/vsql-extension-template"
>
  Fork this template to start building your own VillageSQL extension
</Card>

**Get started:** [Creating Extensions Guide](/mysql-8.4/0.0.3/create)

---

## Next Steps

<CardGroup cols={2}>
  <Card
    title="Install Extensions"
    icon="download"
    href="/mysql-8.4/0.0.3/install"
  >
    Add extensions to your database
  </Card>
  <Card
    title="Create Extension"
    icon="code"
    href="/mysql-8.4/0.0.3/create"
  >
    Build your own extension
  </Card>
  <Card
    title="Managing Extensions"
    icon="sliders"
    href="/mysql-8.4/0.0.3/managing"
  >
    Monitor and troubleshoot
  </Card>
  <Card
    title="System Reference"
    icon="book"
    href="/mysql-8.4/0.0.3/reference"
  >
    Query extension metadata
  </Card>
</CardGroup>
